# ChessEngine

./: CMakeLists.txt  ChessGame.c  ChessGame.h  EvalFunc.c  EvalFunc.h  README.md  Rules.txt  main.c
Pieces/: Bishop.c  Bishop.h  King.c  King.h  Knight.c  Knight.h  Pawn.c  Pawn.h  Queen.c  Queen.h  Rook.c  Rook.h
